--- a/aim/web/ui/src/pages/RunDetail/RunOverviewTab/components/RunOverviewSidebar/RunOverviewSidebar.scss
+++ b/aim/web/ui/src/pages/RunDetail/RunOverviewTab/components/RunOverviewSidebar/RunOverviewSidebar.scss
@@ -3,6 +3,7 @@
 .RunOverviewSidebar {
   margin-top: $space-lg;
   width: $run-overview-sidebar-width;
+  min-width: $run-overview-sidebar-width;
   overflow: hidden;
   padding: $space-xs;
   position: sticky;
